--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </div>
 
     <div class="github">
-      <a href="https://github.com/giovanigenerali/precodeveiculo"
-        ><small>Criado por Giovani Generali</small></a
+      <a href="https://veiculos.fipe.org.br/"
+        ><small>Dúvidas consulte diretamente a FIPE</small></a
       >
     </div>
 
