--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <label>
           <h4>Ano / Combustível</h4>
-          <select id="ano" disabled>
+          <select id="ano">
             <option value="">-</option>
           </select>
         </label>
