--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <select id="tipo_veiculo" disabled>
             <option value="">-</option>
             <option value="1">🚗&nbsp;&nbsp;Carro</option>
-            <option value="2">🏍️&nbsp;&nbsp;Moto</option>
-            <option value="3">🚚&nbsp;&nbsp;Caminhão</option>
+<!--             <option value="2">🏍️&nbsp;&nbsp;Moto</option>
+            <option value="3">🚚&nbsp;&nbsp;Caminhão</option> -->
           </select>
         </label>
 
